--- a/all_for_java.yml
+++ b/all_for_java.yml
@@ -1,5 +1,3 @@
-# This Ansible script needs to be used on a "server" OS, which doesn't have a desktop environment,
-#    e.g. "Raspberry Pi OS Lite"
 - hosts: all
   tasks:
   - name: Update APT to be sure we are using latest repositories
@@ -34,28 +32,21 @@
     become: true
     tags: javafxdownload
     unarchive:
-      src: "https://gluonhq.com/download/javafx-17-ea-sdk-linux-arm32/"
+      src: "https://gluonhq.com/download/javafx-linux-arm32-drm-sdk/"
       dest: "/opt/"
       mode: 0755
       remote_src: true
-    notify: reboot server
 
   - name: Rename the unpacked JavaFX 17 directory to consistently use the same location across projects
     become: true
-    command: rm -rf /opt/arm32fb-sdk/ ; mv /opt/javafx-sdk-17/ /opt/arm32fb-sdk/
+    command: mv /opt/javafx-sdk-17/ /opt/arm32fb-sdk/
     notify: reboot server
 
-  - name: Install XServer to be able to run JavaFX application in kiosk mode
-    become: yes
+  - name: Install Visual Studio Code
+    become: true
     apt:
-      name: ['xserver-xorg','x11-xserver-utils','xinit','lightdm','openbox']
+      name: code
       state: present
-    notify: reboot server
-
-  - name: Automatic login
-    become: yes
-    command: "raspi-config nonint do_boot_behaviour B4"
-    notify: reboot server
 
   handlers:
     - name: reboot server
