--- a/all_for_java.yml
+++ b/all_for_java.yml
@@ -28,18 +28,17 @@
       name: openjdk-11-jdk
       state: present
 
-  - name: Download and extract OpenJFX 17
+  - name: Download OpenJFX 17
+    get_url:
+      url: "https://gluonhq.com/download/javafx-17-ea-sdk-linux-arm32/"
+      dest: "/home/pi/openjfx.zip"
+
+  - name: Extract OpenJFX 17
     become: true
-    tags: javafxdownload
     unarchive:
-      src: "https://gluonhq.com/download/javafx-17-ea-sdk-linux-arm32/"
+      src: "/home/pi/openjfx.zip"
       dest: "/opt/"
       mode: 0755
-      remote_src: true
-
-  - name: Rename the unpacked JavaFX 17 directory to consistently use the same location across projects
-    become: true
-    command: mv /opt/javafx-sdk-17/ /opt/arm32fb-sdk/
 
   - name: Install Visual Studio Code
     become: true
